Fixed overlapping text on exit button in alert of help lightbox. Small div floats right to make sure text doesn't come up from under.

--- a/trunk/style.css
+++ b/trunk/style.css
@@ -114,6 +114,12 @@
     cursor: pointer;
 }
 
+#closexbuffer {
+    float: right;
+    width: 40px;
+    height: 40px;
+}
+
 #tinycontenthelp h1, #tinycontenthelp h2, #tinycontenthelp h3,
 #tinycontenthelp h4, #tinycontenthelp h5, #tinycontenthelp h6 {
     margin-top: 0;
